src/test/StaticFail2/StaticFail2.expected
error: StaticFail2.panda:11:13: 'StaticFail2.test' may not be modified
1 error
